monitoring/tempo/http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tempo
  namespace: monitoring
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
  hostnames:
    - "tempo.vanillax.xyz"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tempo-distributed-query-frontend
          port: 3100
