monitoring/tempo/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tempo-network-policy
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: tempo
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: monitoring
        - namespaceSelector:
            matchLabels:
              name: ingress-nginx
    - from: []
      ports:
        - protocol: TCP
          port: 3100
        - protocol: TCP
          port: 14268
        - protocol: TCP
          port: 14250
        - protocol: TCP
          port: 9411
        - protocol: TCP
          port: 4317
        - protocol: TCP
          port: 4318
  egress:
    - {} # Allow all egress
